# airflow-providers-tdengine

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml  package.yml  tests.yml
airflow/providers/tdengine/: __init__.py
airflow/providers/tdengine/operators/: tdengine.py
sciaiot/airflow/providers/tdengine/: __init__.py
sciaiot/airflow/providers/tdengine/hooks/: tdengine.py
sciaiot/airflow/providers/tdengine/operators/: tdengine.py
src/sciaiot/airflow/providers/tdengine/: __init__.py
src/sciaiot/airflow/providers/tdengine/hooks/: tdengine.py
src/sciaiot/airflow/providers/tdengine/operators/: tdengine.py
tdengine/: __init__.py
tdengine/hooks/: tdengine.py
tdengine/operators/: tdengine.py
tests/: DDL.sql  test_provider_info.py
tests/hooks/: test_tdengine.py
tests/operators/: meters.csv  test_tdengine.py
