[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sciaiot-airflow-providers-tdengine"
authors = [
    { name = "Nick Yao", email = "ipaddicting@gmail.com" }
]
license = { text = "Apache License 2.0" }
description = "The Apache Airflow provider package for TDengine built by SCIA IoT."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.12"
dependencies = [
    "apache-airflow>=3.0.3",
    "taospy>=2.8.3",
]

[project.urls]
Homepage = "https://github.com/scia-iot"
Source = "https://github.com/scia-iot/airflow-providers-tdengine/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "sciaiot.airflow.providers.tdengine.__init__:get_provider_info"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"sciaiot" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "sciaiot.airflow.providers.tdengine.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]

[tool.pytest.ini_options]
log_cli = true
